# CollisionOpenGL

./: .gitignore  CMakeLists.txt  README.md
include/: renderer.h
src/: main.cpp  renderer.cpp
